--- a/UT5/TE5.2/TE_5.2.ipynb
+++ b/UT5/TE5.2/TE_5.2.ipynb
@@ -183,7 +183,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Ejercico 4\n",
+    "### Ejercicio 4\n",
     "\n",
     "Según este DTD crea un **fichero XML** que cumpla con las especificaciones que indica. <br>\n",
     "El XML debe incorporar al DTD de forma externa.\n",
@@ -220,7 +220,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Ejericio 5\n",
+    "### Ejercicio 5\n",
     "\n",
     "Según este XML define un DTD externo privado que lo valide siguiendo las reglas:\n",
     "- Una cartelera puede no haber contener ninguna pelicula.\n",
@@ -304,7 +304,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Ejericio 6\n",
+    "### Ejercicio 6\n",
     "\n",
     "Según este XML define un DTD externo privado que lo valide siguiendo las reglas:\n",
     "- El número de factura (n_fac), número de cliente (n_cli) y número de pedido (n_ped) son valores únicos, por cada factura, cliente y pedido distintos, y son obligatorios. \n",
@@ -390,7 +390,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Ejericio 7\n",
+    "### Ejercicio 7\n",
     "\n",
     "Según el siguiente fichero [XML](./res/courses.xml) genera un DTD externo que lo valide y enlaza el XML con el DTD.\n",
     "\n",
