--- a/UT5/TE5.2/TE_5.2.ipynb
+++ b/UT5/TE5.2/TE_5.2.ipynb
@@ -64,6 +64,19 @@
    },
    "outputs": [],
    "source": [
+    "<!DOCTYPE matricula [\n",
+    "  <!ELEMENT matricula (personal, pago)>\n",
+    "  <!ELEMENT personal (dni, nombre, titulacion, curso_academico, domicilios)>\n",
+    "  <!ELEMENT dni (#PCDATA)>\n",
+    "  <!ELEMENT nombre (#PCDATA)>\n",
+    "  <!ELEMENT titulacion (#PCDATA)>\n",
+    "  <!ELEMENT curso_academico (#PCDATA)>\n",
+    "  <!ELEMENT domicilios (domicilio+)>\n",
+    "  <!ELEMENT domicilio (nombre)>\n",
+    "  <!ATTLIST domicilio tipo CDATA #REQUIRED>\n",
+    "  <!ELEMENT pago (tipo_matricula)>\n",
+    "  <!ELEMENT tipo_matricula (#PCDATA)>\n",
+    "]>\n",
     "\n"
    ]
   },
@@ -113,7 +126,14 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "<!ELEMENT stock (articulo*)>\n",
+    "<!ELEMENT articulo (categoria, precio?)>\n",
+    "<!ATTLIST articulo codigo CDATA #REQUIRED>\n",
+    "<!ELEMENT categoria (#PCDATA)>\n",
+    "<!ELEMENT precio (#PCDATA)>\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -177,7 +197,16 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "<!DOCTYPE empresas [\n",
+    "  <!ELEMENT empresas (empresa*)>\n",
+    "  <!ELEMENT empresa (propietario, jefe?, empleado+)>\n",
+    "  <!ELEMENT propietario (codigo?, nombre, tfno, edad?)>\n",
+    "  <!ELEMENT jefe (codigo?, nombre, tfno, edad?)>\n",
+    "  <!ELEMENT empleado (codigo?, nombre, tfno, edad?)>\n",
+    "  <!ATTLIST empleado codigo CDATA \"\" dpto (1|2|3|4|5) #IMPLIED puesto (entrenador_personal|empleado) #IMPLIED>\n",
+    "]>\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -214,7 +243,17 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "<?xml version=\"1.0\"?>\n",
+    "<!DOCTYPE curso SYSTEM \"curso.dtd\">\n",
+    "<curso>\n",
+    "  <codigo>CS101</codigo>\n",
+    "  <fechainicio dia=\"15\" mes=\"01\"/>\n",
+    "  <alumno mayor_edad=\"true\">\n",
+    "    <dni>123456789</dni>\n",
+    "  </alumno>\n",
+    "</curso>\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -298,7 +337,27 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "<!ELEMENT cartelera (pelicula*)>\n",
+    "<!ELEMENT pelicula (titulo, titulo_original?, nacionalidad, genero, (clasificacion | sin_clasificar)?, sinopsis, director, reparto+, web?, cartel?)>\n",
+    "<!ATTLIST pelicula\n",
+    "          codigo CDATA #REQUIRED\n",
+    "          duracion CDATA #REQUIRED\n",
+    "          anio CDATA #IMPLIED>\n",
+    "<!ELEMENT titulo (#PCDATA)>\n",
+    "<!ELEMENT titulo_original (#PCDATA)>\n",
+    "<!ELEMENT nacionalidad (#PCDATA)>\n",
+    "<!ELEMENT genero (#PCDATA)>\n",
+    "<!ELEMENT clasificacion EMPTY>\n",
+    "<!ATTLIST clasificacion edad (tp|8|12|16|18) #REQUIRED>\n",
+    "<!ELEMENT sin_clasificar EMPTY>\n",
+    "<!ELEMENT sinopsis (#PCDATA)>\n",
+    "<!ELEMENT director (#PCDATA)>\n",
+    "<!ELEMENT reparto (actor+)>\n",
+    "<!ELEMENT actor (#PCDATA)>\n",
+    "<!ELEMENT web (#PCDATA)>\n",
+    "<!ELEMENT cartel (#PCDATA)>\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -384,7 +443,43 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "<!ELEMENT factura (datos_empresa, datos_cliente, datos_factura)>\n",
+    "<!ATTLIST factura\n",
+    "          n_fac ID #REQUIRED>\n",
+    "          \n",
+    "<!ELEMENT datos_empresa (nombre, dir, poblacion, provincia, cif, telefono?)>\n",
+    "<!ELEMENT nombre (#PCDATA)>\n",
+    "<!ELEMENT dir (#PCDATA)>\n",
+    "<!ELEMENT poblacion (#PCDATA)>\n",
+    "<!ATTLIST poblacion cod_postal CDATA #REQUIRED>\n",
+    "<!ELEMENT provincia (#PCDATA)>\n",
+    "<!ELEMENT cif (#PCDATA)>\n",
+    "<!ELEMENT telefono (#PCDATA)>\n",
+    "\n",
+    "<!ELEMENT datos_cliente (nombre, dir_env, poblacion, provincia)>\n",
+    "<!ATTLIST datos_cliente\n",
+    "          n_cli ID #REQUIRED>\n",
+    "\n",
+    "<!ELEMENT datos_factura (fecha, linea+, base, cuota_iva, total)>\n",
+    "<!ATTLIST datos_factura\n",
+    "          n_ped ID #REQUIRED\n",
+    "          iva CDATA #REQUIRED\n",
+    "          f_pago (efectivo|tarjeta|plazos) #REQUIRED>\n",
+    "\n",
+    "<!ELEMENT fecha (#PCDATA)>\n",
+    "\n",
+    "<!ELEMENT linea (ref, desc, cant, precio, importe)>\n",
+    "<!ELEMENT ref (#PCDATA)>\n",
+    "<!ELEMENT desc (#PCDATA)>\n",
+    "<!ELEMENT cant (#PCDATA)>\n",
+    "<!ELEMENT precio (#PCDATA)>\n",
+    "<!ELEMENT importe (#PCDATA)>\n",
+    "\n",
+    "<!ELEMENT base (#PCDATA)>\n",
+    "<!ELEMENT cuota_iva (#PCDATA)>\n",
+    "<!ELEMENT total (#PCDATA)>"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -455,7 +550,27 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "<!DOCTYPE programme SYSTEM \"08_ejercicio.dtd\">\n",
+    "<programme>\n",
+    "  <degree>Bachelor of Science</degree>\n",
+    "  <year>2023</year>\n",
+    "  <results>\n",
+    "    <distinction>\n",
+    "      <name>John Doe</name>\n",
+    "    </distinction>\n",
+    "    <merit>\n",
+    "      <name>Jane Smith</name>\n",
+    "      <name>Michael Johnson</name>\n",
+    "    </merit>\n",
+    "    <pass>\n",
+    "      <name>Alice Brown</name>\n",
+    "      <name>Robert White</name>\n",
+    "      <name>Emily Davis</name>\n",
+    "    </pass>\n",
+    "  </results>\n",
+    "</programme>\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -466,7 +581,24 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "<!DOCTYPE programme SYSTEM \"08_ejercicio.dtd\">\n",
+    "<programme>\n",
+    "  <degree>Master of Arts</degree>\n",
+    "  <year>2022</year>\n",
+    "  <results>\n",
+    "    <merit>\n",
+    "      <name>David Clark</name>\n",
+    "      <name>Susan Johnson</name>\n",
+    "    </merit>\n",
+    "    <pass>\n",
+    "      <name>Emma Wilson</name>\n",
+    "      <name>James Miller</name>\n",
+    "      <name>Sophia Lee</name>\n",
+    "    </pass>\n",
+    "  </results>\n",
+    "</programme>\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -477,7 +609,24 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "<!DOCTYPE programme SYSTEM \"08_ejercicio.dtd\">\n",
+    "<programme>\n",
+    "  <degree>Ph.D. in Computer Science</degree>\n",
+    "  <year>2021</year>\n",
+    "  <results>\n",
+    "    <distinction>\n",
+    "      <name>Christopher Robinson</name>\n",
+    "      <name>Megan Taylor</name>\n",
+    "    </distinction>\n",
+    "    <pass>\n",
+    "      <name>William Martinez</name>\n",
+    "      <name>Linda Brown</name>\n",
+    "      <name>Andrew White</name>\n",
+    "    </pass>\n",
+    "  </results>\n",
+    "</programme>\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -503,6 +652,79 @@
     "  - Jornada 2, equipo local: Barcelona, equipo visitante: Real Sociedad, resultado: 1-1.\n",
     "\n",
     "Inventar los datos de los jugadores y goles, y cualquier otro dato que sea necesario."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "xml"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "<!ELEMENT liga (partido+)>\n",
+    "<!ELEMENT partido (jornada, equipo-local, equipo-visitante, resultado, goles+)>\n",
+    "<!ELEMENT jornada (#PCDATA)>\n",
+    "<!ELEMENT equipo-local (codigo, nombre, entrenador, jugadores*)>\n",
+    "<!ELEMENT equipo-visitante (codigo, nombre, entrenador, jugadores*)>\n",
+    "<!ELEMENT resultado (#PCDATA)>\n",
+    "<!ELEMENT goles (gol+)>\n",
+    "<!ELEMENT gol (jugador, codigo-equipo, penalty?)>\n",
+    "<!ELEMENT jugador (nombre, numero-camiseta, posicion, tarjetas?)>\n",
+    "<!ELEMENT tarjetas (amarillas?, rojas?)>\n",
+    "<!ELEMENT amarillas (#PCDATA)>\n",
+    "<!ELEMENT rojas (#PCDATA)>\n",
+    "<!ATTLIST equipo-local codigo ID #REQUIRED>\n",
+    "<!ATTLIST equipo-visitante codigo ID #REQUIRED>\n",
+    "<!ATTLIST gol minuto CDATA #REQUIRED>\n",
+    "\n",
+    "<!DOCTYPE liga SYSTEM \"liga.dtd\">\n",
+    "<liga>\n",
+    "  <partido>\n",
+    "    <jornada>1</jornada>\n",
+    "    <equipo-local codigo=\"RM\" nombre=\"Real Madrid\" entrenador=\"Zinedine Zidane\">\n",
+    "      <jugadores>\n",
+    "        <jugador nombre=\"Karim Benzema\" numero-camiseta=\"9\" posicion=\"Delantero\">\n",
+    "          <tarjetas>\n",
+    "            <amarillas>1</amarillas>\n",
+    "          </tarjetas>\n",
+    "        </jugador>\n",
+    "        <!-- Otros jugadores aquí -->\n",
+    "      </jugadores>\n",
+    "    </equipo-local>\n",
+    "    <equipo-visitante codigo=\"BAR\" nombre=\"Barcelona\" entrenador=\"Ronald Koeman\">\n",
+    "      <jugadores>\n",
+    "        <!-- Jugadores del Barcelona aquí -->\n",
+    "      </jugadores>\n",
+    "    </equipo-visitante>\n",
+    "    <resultado>2-2</resultado>\n",
+    "    <goles>\n",
+    "      <gol jugador=\"Karim Benzema\" codigo-equipo=\"RM\" penalty=\"no\" minuto=\"30\" />\n",
+    "      <!-- Otros goles aquí -->\n",
+    "    </goles>\n",
+    "  </partido>\n",
+    "\n",
+    "  <partido>\n",
+    "    <jornada>2</jornada>\n",
+    "    <equipo-local codigo=\"BAR\" nombre=\"Barcelona\" entrenador=\"Ronald Koeman\">\n",
+    "      <jugadores>\n",
+    "        <!-- Jugadores del Barcelona aquí -->\n",
+    "      </jugadores>\n",
+    "    </equipo-local>\n",
+    "    <equipo-visitante codigo=\"RS\" nombre=\"Real Sociedad\" entrenador=\"Imanol Alguacil\">\n",
+    "      <jugadores>\n",
+    "        <!-- Jugadores de la Real Sociedad aquí -->\n",
+    "      </jugadores>\n",
+    "    </equipo-visitante>\n",
+    "    <resultado>1-1</resultado>\n",
+    "    <goles>\n",
+    "      <!-- Goles del segundo partido aquí -->\n",
+    "    </goles>\n",
+    "  </partido>\n",
+    "</liga>\n",
+    "\n"
    ]
   }
  ],
